src/main/java/com/example/signalbackend/global/error/exception/GlobalException.java
package com.example.signalbackend.global.error.exception;

import com.example.signalbackend.global.error.exception.ErrorCode;
import lombok.Getter;
import lombok.RequiredArgsConstructor;

@Getter
@RequiredArgsConstructor
public class GlobalException extends RuntimeException {
    private final ErrorCode errorCode;
}
